# lafmm

./: CHANGELOG.md  CLAUDE.md  README.md  lafmm_rules.md  pyproject.toml
skills/build-watchlist/: SKILL.md
skills/build-watchlist/references/: sector-criteria.md
skills/chart/: SKILL.md
skills/daily-update/: SKILL.md
skills/daily-update/references/: fetch-prices.md  sync-lafmm-cache.md
skills/daily-update/scripts/: fetch-prices.py
skills/detect-regime/: SKILL.md
skills/detect-regime/scripts/: regime.py
skills/earnings-calendar/: SKILL.md
skills/earnings-calendar/scripts/: earnings.py
skills/factor-exposure/: SKILL.md
skills/factor-exposure/scripts/: factor.py
skills/fetch-prices/: SKILL.md
skills/fetch-prices/scripts/: fetch.py
skills/news-context/: SKILL.md
skills/news-context/references/: feeds.md  three-atoms.md
skills/position-size/: SKILL.md
skills/position-size/scripts/: size.py
skills/qualify/: SKILL.md
skills/qualify/references/: momentum.md  oversold.md  position-sizing.md  range.md
skills/quote/: SKILL.md
skills/quote/scripts/: quote.py
skills/stats/: SKILL.md
skills/stats/scripts/: compute.py
skills/sync-lafmm-cache/: SKILL.md
skills/sync-trades/: SKILL.md
skills/sync-trades/references/: ibkr-setup.md
skills/tune-thresholds/: SKILL.md
skills/validate-signal/: SKILL.md
src/lafmm/: __init__.py  _chart_cmd.py  agent_prompt.py  app.py  chart.py  classify.py  colors.py  engine.py  fetch.py  group.py  indicators.py  init.py  loader.py  main.py  meta.py  models.py  stats.py  sync_cache.py  tape.py  tui.py
(+19 files in other folders)
