[project]
name = "lafmm"
version = "0.5.0"
description = "Livermore's Anticipating Future Movements Map"
readme = "README.md"
authors = [
    { name = "Glenn Miao", email = "glennmiao@lemorage.com" }
]
requires-python = ">=3.14"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [
    "rich",
    "click",
    "textual>=8.2.3",
    "yfinance",
]

[project.scripts]
lafmm = "lafmm.main:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/lafmm/agent_prompt.py" = ["E501"]

[tool.ty.src]
exclude = ["skills/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
